k8s/admin-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: admin
  ports:
    - port: 3000
      targetPort: 3000
