k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
  rules:
    http:
      paths:
        - path: /?(.*)
          backend:
            serviceName: client-cluster-ip-service
            servicePort: 3000
        - path: /api/?(.*)
          backend:
            serviceName: api-cluster-ip-service
            servicePort: 3000
        - path: /admin/?(.*)
          backend:
            serviceName: admin-cluster-ip-service
            servicePort: 3000
